# tranX

./: .gitignore  LICENSE  README.md  evaluation.py  exp.py  not_used.py  pull_data.sh  setup.cfg  setup.py  utcs.yml
asdl/: README.md  __init__.py  asdl.py  asdl_ast.py  hypothesis.py  logical_form.py  transition_system.py  utils.py
common/: evaluator.py  registerable.py  savable.py  utils.py
components/: DecodeHypothesis.py  __init__.py  action_info.py  dataset.py  evaluator.py  reranker.py  standalone_parser.py  utils.py  vocab.py
config/env/: frank.yml  py2torch3.cpu.yml  py2torch3cuda9.yml  py3torch3cuda9.yml  tranx-py2.yml  tranx.yml
config/server/: config_py2.json  config_py3.json
datasets/: __init__.py  configuration.py  utils.py
datasets/atis/: dataset.py  example_processor.py
datasets/conala/: bleu_score.py  conala_eval.py  create_corpus_for_seg.py  dataset.py  docstring.py  evaluator.py  example_processor.py  util.py
datasets/django/: dataset.py  evaluator.py  example_processor.py
datasets/geo/: example_processor.py
datasets/prolog/: dataset.py
datasets/wikisql/: dataset.py  evaluator.py  utils.py
model/: attention_util.py  decomposable_attention_model.py  lstm.py  neural_lm.py  nn_utils.py  paraphrase.py  parser.py  pointer_net.py  prior.py  reconstruction_model.py  seq2seq.py  seq2seq_copy.py  struct_vae.py  utils.py
scripts/: split_dataset.py  split_dataset.sh  test.sh  train.sh  train_decoder.sh  train_lstm_prior.py  train_prior.sh  train_semi.py  train_semi.sh  train_source_lm.py  train_src_lm.sh
server/: README.md  app.py  config_conala.json  requirements.txt  test_request.py
(+86 files in other folders)
